--- a/frontend/style.css
+++ b/frontend/style.css
@@ -34,6 +34,11 @@ h1 {
     color: #d5850c;
 }
 
+h2 {
+    font-size: 30px;
+    color: var(--secondary-color)
+}
+
 .container {
     width: 80%;
     margin: 20px;
